--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.19",
+    "expo-camera": "~14.1.3",
+    "expo-image": "~1.10.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-crop-picker": "^0.41.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-camera": "~14.1.3",
-    "expo-image": "~1.10.6"
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
